This SHOULD have fixed the alignment of the Game System form field.

--- a/src/css_modules/form.module.css
+++ b/src/css_modules/form.module.css
@@ -46,6 +46,7 @@
     #section1{
         align-self: center;
         justify-items: center;
+        justify-content: center;
 
         width: 90%;
        
